home page updated

--- a/public/index.html
+++ b/public/index.html
@@ -203,22 +203,55 @@
   <section class="bg-black-50">
     <div class="max-w-5xl mx-auto px-8 py-16 md:py-24">
       <h3 class="text-4xl font-semibold py-2">Why Choose BKPNepal?</h3>
-      <div class="grid md:grid-cols-4 gap-4 mt-4" data-aos="slide-up">
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Investment</p>
+      <div class="grid md:grid-cols-4 gap-8 mt-10" data-aos="slide-up">
+        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+            viewBox="0 0 20 20">
+            <path fill-rule="evenodd"
+              d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+              clip-rule="evenodd" />
+          </svg>
+          <div class="">
+            <span class="text-sm">For</span>
+            <p class="text-2xl">Investment</p>
+          </div>
+
         </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Business with company</p>
+        <div class="bg-white relative shadow p-4 py-8  rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+            viewBox="0 0 20 20">
+            <path fill-rule="evenodd"
+              d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+              clip-rule="evenodd" />
+          </svg>
+          <div>
+            <span class="text-sm">For</span>
+            <p class="text-2xl">Business with company</p>
+          </div>
         </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Employment</p>
+        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+            viewBox="0 0 20 20">
+            <path fill-rule="evenodd"
+              d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+              clip-rule="evenodd" />
+          </svg>
+          <div>
+            <span class="text-sm">For</span>
+            <p class="text-2xl">Employment</p>
+          </div>
         </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Becoming Agent</p>
+        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
+            viewBox="0 0 20 20">
+            <path fill-rule="evenodd"
+              d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
+              clip-rule="evenodd" />
+          </svg>
+          <div>
+            <span class="text-sm">For</span>
+            <p class="text-2xl">Becoming Agent</p>
+          </div>
         </div>
       </div>
     </div>
@@ -394,19 +427,19 @@
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="action-plan.html">Action
               Plan</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="membership-type.html">Register</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="upcoming-projects.html">Upcoming
-              Projects</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="about.html">About
-              us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="contact.html">Contact
-              us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="login.html">Login</a></li>
+              <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+                href="upcoming-projects.html">Upcoming
+                Projects</a></li>
+                <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+                  href="about.html">About
+                  us</a></li>
+                  <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+                    href="contact.html">Contact
+                    us</a></li>
+                    <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+                      href="login.html">Login</a></li>
+                      <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+                          href="register.html">Register</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
