--- a/public/register.html
+++ b/public/register.html
@@ -25,10 +25,10 @@
                 <ul class="flex items-center text-sm  space-x-0 text-gray-800">
                     <li><a class="nav-links" href="/">Home</a></li>
                     <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
-                    <li><a class="nav-links" href="membership-type.html">Register</a></li>
                     <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
                     <li><a class="nav-links" href="about.html">About us</a></li>
                     <li><a class="nav-links" href="contact.html">Contact us</a></li>
+                    <li class="hover:bg-transparent"><a class="nav-links" href="register.html">Register</a></li>
                 </ul>
             </nav>
             <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
