--- a/public/contact.html
+++ b/public/contact.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=natosans:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>BKP Nepal | Contact us | Life Changing Platform </title>
 </head>
 
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
+<body class="bg-[#fff] font-natosans antialiased text-gray-700">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
@@ -25,10 +25,10 @@
         <ul class="flex items-center text-sm space-x-0 text-gray-800">
           <li><a class="nav-links" href="/">Home</a></li>
           <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
-          <li><a class="nav-links" href="membership-type.html">Register</a></li>
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
+          <li><a class="btn bg-brand text-white" href="register.html">Register</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -186,7 +186,7 @@
     <main class="max-w-3xl mx-auto grid sm:grid-cols-6 gap-8 p-8 min-h-96 bg-white rounded-md shadow">
       <div
         class="sm:col-span-3 text-black-700 bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-between">
-        <h2 class="text-2xl mb-4 sm:mb-0">We love to hear <br>from you</h2>
+        <h2 class="text-2xl mb-4 sm:mb-0 font-semibold">We love to hear <br>from you</h2>
         <div class="text-gray-700">
           <h3 class="text-xl text-gray-700 font-semibold mb-2">We are at</h3>
           <div>
@@ -256,7 +256,7 @@
       </div>
 
       <div class="row-start-1 sm:row-auto sm:col-span-3">
-        <h3 class="text-2xl mb-4">Send us a message</h3>
+        <h3 class="text-3xl font-bold mb-8">Send us a message</h3>
         <form action="">
           <label class="mb-4 block" for="fullname">
             <input class="input" type="text" name="fullname" id="fullname" placeholder="Full Name" required />
@@ -357,6 +357,9 @@
             </p>
           </address>
         </div>
+        <div class="mt-6">
+          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        </div>
       </div>
 
       <!-- footer sitemap -->
@@ -368,8 +371,7 @@
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="action-plan.html">Action
               Plan</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="membership-type.html">Register</a></li>
+
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="upcoming-projects.html">Upcoming
               Projects</a></li>
@@ -381,6 +383,8 @@
               us</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="login.html">Login</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="register.html">Register</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
