--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=natosans:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -21,14 +21,14 @@
       <a class="w-[140px]" href="/">
         <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
       </a>
-      <nav class="hidden lg:block">
-        <ul class="flex items-center text-sm space-x-0 text-gray-800">
+      <nav class="hidden lg:block ">
+        <ul class="flex items-center text-sm space-x-0 text-gray-800 font-semibold">
           <li><a class="nav-links" href="/">Home</a></li>
           <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
-          <li><a class="nav-links" href="register.html">Register</a></li>
+          <li><a class="btn bg-brand font-semibold" href="register.html">Register</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -186,12 +186,12 @@
   <section class="w-full bg-[url('../images/hero1.jpg')] bg-fixed bg-no-repeat bg-cover bg-bottom">
     <div class="w-full min-h-[100vh] bg-black bg-opacity-75 flex flex-col justify-center items-center ">
       <h1
-        class="mt-8 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-4xl md:text-6xl font-natosans font-black md:max-w-xl"
+        class="mt-8 px-2 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-5xl md:text-6xl font-natosans font-black md:max-w-xl"
         style="line-height: 1.2;">जीवन बदल्ने साझा
         मंचमा हजुरलाई स्वागत छ।</h1>
       <div>
         <a href="register.html"
-          class="text-white text-md md:text-2xl bg-brand  hover:bg-brand-800 mt-4 md:mt-8 px-6 py-2 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
+          class="text-white text-md md:text-2xl bg-brand  hover:bg-brand-800 mt-6 md:mt-8 px-6 py-2 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
           a member
         </a>
       </div>
@@ -202,9 +202,9 @@
   <!-- start of why choose bkp nepal -->
   <section class="bg-black-50">
     <div class="max-w-5xl mx-auto px-8 py-16 md:py-24">
-      <h3 class="text-4xl font-semibold py-2">Why Choose BKPNepal?</h3>
-      <div class="grid md:grid-cols-4 gap-8 mt-10" data-aos="slide-up">
-        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+      <h3 class="text-3xl font-bold py-2">Why Choose BKP Nepal?</h3>
+      <div class="grid md:grid-cols-4 gap-8 mt-10 content-center" >
+        <div class="bg-white relative shadow px-8 py-8 rounded-md " data-aos="slide-up">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -217,7 +217,7 @@
           </div>
 
         </div>
-        <div class="bg-white relative shadow p-4 py-8  rounded-md">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -229,7 +229,7 @@
             <p class="text-2xl">Business with company</p>
           </div>
         </div>
-        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -241,7 +241,7 @@
             <p class="text-2xl">Employment</p>
           </div>
         </div>
-        <div class="bg-white relative shadow p-4 py-8 rounded-md">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -261,39 +261,39 @@
   <!-- about us section -->
   <section class="bg-white">
     <div class="section font-natosans" data-aos="slide-right">
-      <h3 class="text-4xl font-bold">हाम्रो बारेमा</h3>
+      <h3 class="text-3xl font-semibold">हाम्रो बारेमा</h3>
       <p class="my-6 text-xl md:max-w-3xl leading-relaxed md:font-normal text-black-600">विविध बस्तु तथा क्षेत्र हरुमा
         राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति
         २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड
         प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल
         -११ रुपन्देही मा रहेको छ।</p>
-      <a href="about.html" class="bg-brand text-sm text-white hover:bg-brand-800 rounded-full px-6 py-1">पुरा पढ्नुस</a>
+      <a href="about.html" class="btn bg-brand text-sm ">पुरा पढ्नुस</a>
     </div>
 
   </section>
   <!-- end of about us section -->
 
   <!-- hamro mantra section -->
-  <section class="bg-white border-t border-t-black-50">
-    <div class="section" data-aos="fade-in">
-      <h3 class="text-black-800 font-natosans text-4xl font-bold">हाम्रो मन्त्र</h3>
+  <section class="bg-gray-200 border-t border-t-black-50">
+    <div class="section text-sm" data-aos="fade-in">
+      <h3 class="text-3xl font-semibold">हाम्रो मन्त्र</h3>
       <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold">
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8"
-            src="https://cdn-icons.flaticon.com/png/512/756/premium/756740.png?token=exp=1648019459~hmac=53ffa2a8f85db2f951c43d78e9fbb7e1"
+        <div class="bg-white p-4 rounded-lg shadow-sm flex flex-col justify-center items-center">
+          <img loading="lazy" class="h-16"
+            src="images/teamwork.png"
             alt="teamwork">
-          <p class="text-2xl text-brand-800 text-center py-2">Team Work</p>
+          <p class=" py-2">Team Work</p>
         </div>
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8" src="https://cdn-icons-png.flaticon.com/512/780/780528.png" alt="technology icon">
-          <p class="text-2xl text-brand-800 text-center py-2">Technology</p>
+        <div class="bg-white p-4 rounded-lg shadow-sm flex flex-col justify-center items-center">
+          <img loading="lazy" class="h-16" src="images/technology.png" alt="technology icon">
+          <p class=" py-2">Technology</p>
         </div>
 
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8"
-            src="https://cdn-icons.flaticon.com/png/512/3707/premium/3707965.png?token=exp=1648019670~hmac=7e3fdeb72207b151cd082a840ba6d1ed"
+        <div class="bg-white p-12 rounded-lg shadow-sm flex flex-col justify-center items-center">
+          <img loading="lazy" class="h-16"
+            src="images/compound1.png"
             alt="compounding">
-          <p class="text-2xl text-brand-800 text-center py-2">Compounding</p>
+          <p class="py-2">Compounding</p>
         </div>
       </div>
     </div>
@@ -416,6 +416,9 @@
             </p>
           </address>
         </div>
+        <div class="mt-8">
+          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        </div>
       </div>
 
       <!-- footer sitemap -->
@@ -427,19 +430,19 @@
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="action-plan.html">Action
               Plan</a></li>
-              <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-                href="upcoming-projects.html">Upcoming
-                Projects</a></li>
-                <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-                  href="about.html">About
-                  us</a></li>
-                  <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-                    href="contact.html">Contact
-                    us</a></li>
-                    <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-                      href="login.html">Login</a></li>
-                      <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-                          href="register.html">Register</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="upcoming-projects.html">Upcoming
+              Projects</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="about.html">About
+              us</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="contact.html">Contact
+              us</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="login.html">Login</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="register.html">Register</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
