--- a/public/about.html
+++ b/public/about.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=natosans:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>BKP Nepal | About us | Life Changing Platform </title>
 </head>
 
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
+<body class="bg-[#fff] font-natosans antialiased text-gray-700">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
@@ -25,10 +25,10 @@
         <ul class="flex items-center text-sm space-x-0 text-gray-800">
           <li><a class="nav-links" href="/">Home</a></li>
           <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
-          <li><a class="nav-links" href="membership-type.html">Register</a></li>
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
+          <li><a class="btn bg-brand text-white" href="register.html">Register</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -184,7 +184,7 @@
 
   <section class="bg-black-50 font-natosans pt-32 pb-16">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg text-xl shadow">
-      <h3 class="font-semibold text-4xl mb-6 py-4">हाम्रो बारेमा</h3>
+      <h3 class="font-semibold text-3xl mb-6 py-4">हाम्रो बारेमा</h3>
       <div class="space-y-4">
         <p class="max-w-[100ch]">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार
           प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता
@@ -318,6 +318,9 @@
             </p>
           </address>
         </div>
+        <div class="mt-6">
+          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        </div>
       </div>
 
       <!-- footer sitemap -->
@@ -330,8 +333,6 @@
               href="action-plan.html">Action
               Plan</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="membership-type.html">Register</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="upcoming-projects.html">Upcoming
               Projects</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
@@ -342,6 +343,8 @@
               us</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="login.html">Login</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="register.html">Register</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
