--- a/public/action-plan.html
+++ b/public/action-plan.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=natosans:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>BKP Nepal | Life Changing Platform </title>
 </head>
 
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
+<body class="bg-[#fff] font-natosans antialiased text-gray-700">
   <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
@@ -25,10 +25,10 @@
         <ul class="flex items-center text-sm space-x-0 text-gray-800">
           <li><a class="nav-links" href="/">Home</a></li>
           <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
-          <li><a class="nav-links" href="membership-type.html">Register</a></li>
           <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
           <li><a class="nav-links" href="about.html">About us</a></li>
           <li><a class="nav-links" href="contact.html">Contact us</a></li>
+          <li><a class="btn bg-brand text-white" href="register.html">Register</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -185,7 +185,7 @@
   <!-- karya yojana section -->
   <section class="w-full bg-gray-100 py-8">
     <div class="mx-auto max-w-4xl py-16 px-6">
-      <h3 class="my-6 pb-4 text-3xl font-bold">कार्य योजना</h3>
+      <h3 class="my-6 pb-4 text-3xl font-semibold">कार्य योजना</h3>
       <div class="grid gap-8 md:grid-cols-3">
         <div class="relative flex min-h-[130px] items-center justify-center rounded bg-white p-9 shadow">
           <svg class="absolute -top-2 -left-2" width="32" viewBox="0 0 82 82" fill="none"
@@ -240,9 +240,9 @@
           <!-- <img loading="lazy" class="object-cover" src="images/punji-bridhi.png" alt="punji bridhi"> -->
         </div>
         <div class="font-natosans p-6">
-          <h4 class="mb-4 text-xl font-semibold">पुंजि वृद्धि</h4>
-          <ul class="p-2 space-y-3 border border-gray-100 text-sm rounded hover:shadow">
-            <li >
+          <h4 class="mb-4 text-2xl font-semibold">पुंजि वृद्धि</h4>
+          <ul class="p-2 space-y-3 border border-gray-100  rounded hover:shadow">
+            <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -277,7 +277,7 @@
             </li>
 
           </ul>
-          <ul class="p-2 mt-4 mb-4 space-y-3 border border-gray-100 text-sm rounded hover:shadow">
+          <ul class="p-2 mt-4 mb-4 space-y-3 border border-gray-100 rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -348,8 +348,8 @@
           <img loading="lazy" class="object-cover object-right-top" src="images/bypar.png" alt="punji bridhi">
         </div>
         <div class="font-natosans p-6">
-          <h4 class="mb-4 text-xl font-semibold">ब्यापार तथा ब्यावसाय वृद्धि</h4>
-          <ul class="p-2 mt-4 mb-4 space-y-3 border border-gray-100 text-sm rounded hover:shadow">
+          <h4 class="mb-4 text-2xl font-semibold">ब्यापार तथा ब्यावसाय वृद्धि</h4>
+          <ul class="p-2 mt-4 mb-4 space-y-3 border border-gray-100 rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -453,8 +453,8 @@
           <img loading="lazy" class="object-cover object-center" src="images/pariyojana.png" alt="punji bridhi">
         </div>
         <div class="font-natosans p-6 flex justify-center flex-col">
-          <h4 class="mb-4 text-xl font-semibold">परियोजना वृद्धि</h4>
-          <ul class="p-2 space-y-3 border border-gray-100 text-base rounded hover:shadow">
+          <h4 class="mb-4 text-2xl font-semibold">परियोजना वृद्धि</h4>
+          <ul class="p-2 space-y-3 border border-gray-100  rounded hover:shadow">
             <li>
               <svg class="float-right mr-2" width="18" viewBox="0 0 22 22" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -615,6 +615,9 @@
             </p>
           </address>
         </div>
+        <div class="mt-6">
+          <a class="btn bg-brand mt-4" href="register.html">Become a member</a>
+        </div>
       </div>
 
       <!-- footer sitemap -->
@@ -626,8 +629,7 @@
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="action-plan.html">Action
               Plan</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="membership-type.html">Register</a></li>
+
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="upcoming-projects.html">Upcoming
               Projects</a></li>
@@ -639,6 +641,8 @@
               us</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
               href="login.html">Login</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="register.html">Register</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
