--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
     <div class="max-w-5xl mx-auto px-8 py-16 md:py-24">
       <h3 class="text-3xl font-bold py-2">Why Choose BKP Nepal?</h3>
       <div class="grid md:grid-cols-4 gap-8 mt-10 content-center" >
-        <div class="bg-white relative shadow px-8 py-8 rounded-md " data-aos="slide-up">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md " data-aos="slide-up" data-aos-delay="50">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -217,7 +217,7 @@
           </div>
 
         </div>
-        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="100">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -229,7 +229,7 @@
             <p class="text-2xl">Business with company</p>
           </div>
         </div>
-        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="150">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -241,7 +241,7 @@
             <p class="text-2xl">Employment</p>
           </div>
         </div>
-        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up">
+        <div class="bg-white relative shadow px-8 py-8 rounded-md" data-aos="slide-up" data-aos-delay="200">
           <svg xmlns="http://www.w3.org/2000/svg" class="absolute -top-5 -left-5 h-12 w-12 fill-green-500"
             viewBox="0 0 20 20">
             <path fill-rule="evenodd"
@@ -277,19 +277,19 @@
   <section class="bg-gray-200 border-t border-t-black-50">
     <div class="section text-sm" data-aos="fade-in">
       <h3 class="text-3xl font-semibold">हाम्रो मन्त्र</h3>
-      <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold">
-        <div class="bg-white p-4 rounded-lg shadow-sm flex flex-col justify-center items-center">
+      <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold" >
+        <div class="bg-white p-4 rounded-lg shadow-sm hover:shadow-lg flex flex-col justify-center items-center" data-aos="slide-up" data-aos-delay="100">
           <img loading="lazy" class="h-16"
             src="images/teamwork.png"
             alt="teamwork">
           <p class=" py-2">Team Work</p>
         </div>
-        <div class="bg-white p-4 rounded-lg shadow-sm flex flex-col justify-center items-center">
+        <div class="bg-white p-4 rounded-lg shadow-sm hover:shadow-lg flex flex-col justify-center items-center" data-aos="slide-up" data-aos-delay="200">
           <img loading="lazy" class="h-16" src="images/technology.png" alt="technology icon">
           <p class=" py-2">Technology</p>
         </div>
 
-        <div class="bg-white p-12 rounded-lg shadow-sm flex flex-col justify-center items-center">
+        <div class="bg-white p-12 rounded-lg shadow-sm hover:shadow-lg flex flex-col justify-center items-center" data-aos="slide-up" data-aos-delay="300">
           <img loading="lazy" class="h-16"
             src="images/compound1.png"
             alt="compounding">
@@ -303,20 +303,15 @@
   <section class="bg-black-50">
     <div
       class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16 md:py-24  bg-black-50">
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pt-3" src="https://cdn-icons-png.flaticon.com/512/1534/1534938.png" alt="" />
-        </div>
+      <div class="card bg-white rounded-lg hover:shadow-lg"  data-aos="slide-right" data-aos-delay="100">
         <div class="px-4 py-4 space-y-2">
           <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Vision</h3>
           <p class="font-natosans text-black-800 text-lg font-semibold">सानो सानो पुंजीलाई एकीकृत गरि बृहत राष्ट्रिय
             पुंजिमा रुपान्तरण गरि उत्पादन ब्यापार प्रबर्द्धन देशलाई आर्थिक समृद्धि मा लैजाने।</p>
         </div>
       </div>
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pt-3" src="https://cdn-icons-png.flaticon.com/512/3891/3891710.png" alt="" />
-        </div>
+      <div class="card bg-white rounded-lg hover:shadow-lg" data-aos="slide-up" data-aos-delay="200">
+       
         <div class="px-4 py-4 space-y-2">
           <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Mission</h3>
           <p class="font-natosans text-black-800 text-lg font-semibold">राष्ट्रिय तथा अन्तर्राष्ट्रिय जगतमा एक
@@ -325,11 +320,8 @@
         </div>
       </div>
 
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pb-2" src="https://cdn-icons-png.flaticon.com/512/1534/1534968.png" alt="" />
-          <!-- <img class="w-7/12" src="https://cdn-icons-png.flaticon.com/512/1239/1239719.png" alt="" /> -->
-        </div>
+      <div class="card bg-white rounded-lg hover:shadow-lg" data-aos="slide-left" data-aos-delay="100">
+        
         <div class=" px-4 py-4 space-y-2">
           <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Goal</h3>
           <p class="font-natosans text-black-800 text-lg font-semibold">सम्पुर्ण नेपाली जन हरु को साझा कम्पनी बनाई
@@ -516,7 +508,7 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset: 120,
+      offset: 100,
     });
   </script>
 
